<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/medida"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/lbl_titulo" />
    <item
        android:id="@+id/contacto"
        android:icon="@android:drawable/ic_delete"
        android:title="@string/lbl_titulo2" />
    <item
        android:id="@+id/historial"
        android:icon="@android:drawable/ic_lock_idle_alarm"
        android:title="@string/lbl_titulo3" />

    <item
        android:id="@+id/info"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/lbl_titulo5"/>

    <item
        android:id="@+id/ajustes"
        android:icon="@drawable/ic_baseline_settings_applications_24"
        android:title="@string/lbl_titulo7"/>
</menu>