<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/lbl_titulo7"
            android:textAlignment="center"
            android:textColor="@color/rojo_light_2"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_usar_chaleco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings_option1"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="@string/settings_option1" />

        <TextView
            android:id="@+id/settings_usar_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings_option2"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="@string/settings_option2" />

        <TextView
            android:id="@+id/settings_ritmo_cardiaco"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/settings_option3"
            android:textColor="@color/black"
            android:textSize="18sp"
            tools:text="@string/settings_option3" />

        <TextView
            android:id="@+id/cambiar_idioma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/lbl_idioma2"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="300dp"
            android:layout_height="60dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            android:onClick="LogOut"
            android:text="@string/lbl_logout"
            android:background="@drawable/buttons" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_user"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_menu_user"
        android:layout_alignParentBottom="true"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:labelVisibilityMode="labeled"
        />

</RelativeLayout>