<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarUser">

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/heartBPM"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="58dp"
                android:layout_marginLeft="58dp"
                android:layout_marginEnd="52dp"
                android:layout_marginRight="52dp"
                android:src="@drawable/ic_corazon" />

            <TextView
                android:id="@+id/tipo_usuario_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:layout_below="@+id/heartBPM"
                android:text="@string/op_usuario2"
                android:textColor="@color/rojo_dark"
                android:textSize="18dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txtID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_design"
                android:padding="10dp"
                android:textColor="@color/rojo_dark"
                android:textColorHint="@color/rojo_dark"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:hint="@string/id_admin"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_design"
                android:padding="10dp"
                android:textColor="@color/rojo_dark"
                android:textColorHint="@color/rojo_dark"
                android:layout_marginBottom="10dp"
                android:textSize="17sp"
                android:textStyle="bold"
                android:hint="@string/nombreCompleto"
                android:inputType="textPersonName" />


            <EditText
                android:id="@+id/btn_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_design"
                android:padding="10dp"
                android:textColor="@color/rojo_dark"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/rojo_dark"
                android:textSize="17sp"
                android:textStyle="bold"
                android:hint="@string/campo_email"
                android:inputType="textEmailAddress" />


            <EditText
                android:id="@+id/btn_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_design"
                android:padding="10dp"
                android:textColor="@color/rojo_dark"
                android:layout_marginBottom="10dp"
                android:textColorHint="@color/rojo_dark"
                android:textSize="17sp"
                android:textStyle="bold"
                android:hint="@string/campo_contrasena"
                android:inputType="textPassword" />


            <EditText
                android:id="@+id/btn_confirmar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_design"
                android:padding="10dp"
                android:textColor="@color/rojo_dark"
                android:textColorHint="@color/rojo_dark"
                android:textSize="17sp"
                android:layout_marginBottom="10dp"
                android:textStyle="bold"
                android:hint="@string/campo_repetirContra"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/button_crear"
                android:layout_width="189dp"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/btn_crear"
                tools:text="@string/btn_crear"
                android:background="@drawable/buttons"
                android:layout_marginTop="20dp"/>


            <TextView
                android:id="@+id/txt_linkIniciar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:onClick="irLogin"
                android:text="@string/txt_linkIniciar"
                android:textColor="@color/rojo_light_2"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/txt_linkIniciar" />

            <TextView
                android:id="@+id/txt_linkRegistrarAdmin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="15dp"
                android:onClick="irRegistrarAdmin"
                android:text="@string/op_usuario1"
                android:textColor="@color/rojo_light"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="@string/op_usuario1" />

        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>