<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ContactoAdminActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/lbl_titulo2"
        android:textAlignment="center"
        android:textColor="@color/rojo_light_2"
        android:id="@+id/lbl_contacto"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="548dp"
        android:layout_below="@+id/lbl_contacto"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <EditText
            android:id="@+id/txt_full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:hint="@string/txt_nombre"
            android:padding="10dp"
            android:textColor="@color/rojo_dark"
            android:textColorHint="@color/rojo_dark"
            android:background="@drawable/input_design"
            android:inputType="textPersonName"
            android:textStyle="bold"/>


        <EditText
            android:id="@+id/txt_number_phone_em"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/settings_email"
            android:layout_margin="15dp"
            android:hint="@string/tel_emergencia"
            android:padding="10dp"
            android:inputType="number"
            android:textColor="@color/rojo_dark"
            android:textColorHint="@color/rojo_dark"
            android:background="@drawable/input_design"
            android:textStyle="bold"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttons"
            android:id="@+id/update_emergencia"
            android:text="@string/actualizar" />


    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_menu"
        android:layout_alignParentBottom="true"
        app:itemTextColor="@drawable/selector"
        app:itemIconTint="@drawable/selector"
        app:labelVisibilityMode="labeled"
        />


</RelativeLayout>